// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetching list when list is empty renders correctly 1`] = `
<div>
  Empty
</div>
`;

exports[`when info is empty renders correctly 1`] = `
<div>
  Empty
</div>
`;

exports[`while is loading renders correctly 1`] = `
<div>
  Loading...
</div>
`;

exports[`with error renders correctly 1`] = `
<div
  style={
    Object {
      "color": "red",
    }
  }
>
  Error foobar
</div>
`;

exports[`with info renders correctly 1`] = `
<div>
  Rendered
</div>
`;
